--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">iPizza</string>
+
+    <string name="default_placeholder">default</string>
+
     <string name="bottombarcell_first_name">待处理</string>
     <string name="bottombarcell_second_name">已处理</string>
     <string name="bottombarcell_third_name">统  计</string>
     <string name="bottombarcell_forth_name">店  铺</string>
+
 </resources>
