--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="bottombarcell_second_name">已处理</string>
     <string name="bottombarcell_third_name">统  计</string>
     <string name="bottombarcell_forth_name">店  铺</string>
+
+    <string name="solvedbarcell_first_name">按达成订单分类</string>
+    <string name="solvedbarcell_second_name">按取消订单分类</string>
+    <string name="solvedbarcell_third_name">按订单评价分类</string>
 </resources>
